--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
-    "@types/cors": "^2.8.10",
-    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
@@ -44,10 +42,8 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "debug": "^4.3.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-winston": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mssql": "^6.3.1",
     "socket.io": "^4.0.1",
